fixing the weird red highlight color on ios Safari

--- a/style.css
+++ b/style.css
@@ -70,9 +70,9 @@ body {
 }
 
 #kitty-an-anim * {
-    -moz-tap-highlight-color: rgba(255,0,0,1);
-    tap-highlight-color: rgba(255,0,0,1);
-    -webkit-tap-highlight-color: rgba(255,0,0,1);
+    -moz-tap-highlight-color: rgba(0,0,0,0);
+    tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 #kitty-an-anim {
@@ -80,9 +80,9 @@ body {
     font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
     font-size: 12px;
     line-height: 1.3;
-    -moz-tap-highlight-color: rgba(255,0,0,1);
-    tap-highlight-color: rgba(255,0,0,1);
-    -webkit-tap-highlight-color: rgba(255,0,0,1);
+    -moz-tap-highlight-color: rgba(0,0,0,0);
+    tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 #kitty-an-obj-1 {
